--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5",
-    "react-toastify": "^4.5.2"
+    "react-scripts": "2.1.5"
   },
   "scripts": {
     "start": "react-app-rewired start",
